<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="android.example.com.movies.MovieDetailActivity">

        <FrameLayout
            android:id="@+id/movie_title_constraint"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:background="@color/MovieDetailTitleBackground">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:padding="16dp"
                android:paddingTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="34sp"/>
        </FrameLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_poster_image"
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/thumbnail_image"
                android:paddingTop="16dp"
                app:layout_constraintRight_toLeftOf="@+id/movie_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:paddingTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_poster_image"/>

            <TextView
                android:id="@+id/movie_vote_average"
                android:layout_width="139dp"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="@+id/movie_release_date"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/movie_release_date"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date"/>'

            <TextView
                android:id="@+id/movie_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster_image"/>

            <ImageButton
                android:id="@+id/imageSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/movie_vote_average"
                app:layout_constraintStart_toStartOf="@+id/movie_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/movie_vote_average"
                android:src="@drawable/ic_action_starr_off"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/trailer_text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/trailer_text_label"
            android:textSize="20sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/review_text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/review_text_label"
            android:textSize="20sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/trailer_empty_text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/trailer_text_label_empty"
            android:textSize="20sp"/>

        <ProgressBar
            android:id="@+id/loading_indicator_review"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/review_text_empty_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/review_text_label_empty"
            android:textSize="20sp"/>

        <ProgressBar
            android:id="@+id/loading_indicator_trailer"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>